# laws

./: CHANGELOG.md  README.md  laws.cabal  stack-7.10.yaml
src/Control/Applicative/: Laws.hs
src/Control/Monad/: Laws.hs
src/Data/Functor/: Laws.hs
src/Data/Monoid/: Laws.hs
